# trading-platform

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: test_agent.json
docs/: shared_platform_refactor_plan.md
scripts/: run_local.sh  run_test_bot.py
src/: __init__.py  contracts.py  observability.py
src/alerting/: __init__.py  base_alerter.py
src/observability/: __init__.py
src/persistence/: __init__.py
src/pipeline/: __init__.py  base_pipeline.py
src/risk/: __init__.py  base_policy.py
src/trading_platform/: __init__.py
src/trading_platform/alerting/: __init__.py  discord.py  dispatcher.py  gmail.py  telegram.py
src/trading_platform/api/: __init__.py  base_app.py
src/trading_platform/config/: __init__.py  base_config.py  env.py
src/trading_platform/data/: __init__.py  cache.py  endpoint_failover.py
src/trading_platform/observability/: __init__.py  latency_tracker.py  log.py  metrics.py  time_windows.py
src/trading_platform/persistence/: __init__.py  base_repository.py  db.py
src/trading_platform/pipeline/: __init__.py  base_pipeline.py  queue.py
src/trading_platform/risk/: __init__.py  base_policy.py  circuit_breaker.py  retry.py
tests/: test_alerting.py  test_alerting_backends.py  test_api.py  test_cache.py  test_config.py  test_endpoint_failover.py  test_latency_tracker.py  test_log.py  test_observability.py  test_performance.py  test_persistence.py  test_pipeline.py  test_retry.py  test_risk.py  test_trading_platform_shared.py
